Add authorization filters

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -4,11 +4,10 @@
       "Default": "Warning"
     }
   },
-  "Authentication": {   
-  },
+  "Authentication": "abcd",
   "Notification": {
     "Sendgrid": {
-      "ApiKey": "" 
+      "ApiKey": "apikey"
     },
     "CompanyEmail": "",
     "CompanyName": "",
